# onepin-python

./: .commitlintrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .spec-sha  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  SUPPORT.md  commitlint.config.cjs  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: post-edit-format.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  pr-slack-notify.yml  promote-prod.yml  publish.yml  regen.yml  release-please-validate.yml  release-please.yml
docs/: PUBLISH.md
examples/: README.md  async_client.py  error_handling.py  list_workflows.py  provider_keys.py  quickstart.py
fern/: fern.config.json  generators.yml
scripts/: gen_cli_docs.py  post_fern.sh
src/onepin/: .fernignore  README.md  __init__.py  _auth_resolve.py  _client.py  _default_clients.py  _version_gate.py  client.py  environment.py  reference.md
src/onepin/.fern/: metadata.json
src/onepin/_cli/: __init__.py  _ctx.py  _dispatch.py  _fsutil.py  _http.py  _manifest.py  _spec.py  _state.py  _update_check.py  main.py  render.py
src/onepin/_cli/_skill/: __init__.py
src/onepin/_cli/auth/: __init__.py  credentials.py  resolver.py
src/onepin/_cli/commands/: __init__.py  _registry.py  auth.py  composites.py  health.py  skill.py  templates.py  uploads.py  voices.py  workflows.py
src/onepin/api_keys/: client.py  raw_client.py
src/onepin/auth/: client.py  raw_client.py
src/onepin/billing/: client.py  raw_client.py
src/onepin/core/: client_wrapper.py
src/onepin/dictionary/: __init__.py  client.py  raw_client.py
src/onepin/dictionary/types/: __init__.py  list_dictionary_entries_api_v1_dictionary_get_request_order.py  list_dictionary_entries_api_v1_dictionary_get_request_sort.py  list_dictionary_entries_api_v1dictionary_get_request_language.py  search_dictionary_entries_api_v1_dictionary_search_get_request_language_item.py  search_dictionary_entries_api_v1_dictionary_search_get_request_order.py  search_dictionary_entries_api_v1dictionary_search_get_request_language_item.py  search_dictionary_entries_api_v1dictionary_search_get_request_sort.py
src/onepin/errors/: __init__.py  forbidden_error.py
src/onepin/health/: client.py  raw_client.py
src/onepin/nodes/: client.py  raw_client.py
src/onepin/provider_keys/: client.py  raw_client.py
src/onepin/providers/: client.py  raw_client.py
src/onepin/templates/: __init__.py  client.py  raw_client.py
src/onepin/templates/types/: __init__.py  list_templates_request_sort.py
src/onepin/tests/: test_aiohttp_autodetect.py
src/onepin/types/: __init__.py  api_counted_list_response_api_key_out.py  api_counted_list_response_catalog_voice_out.py  api_counted_list_response_voice_out.py  api_counted_list_response_workflow_list_item.py  api_counted_list_response_workflow_run_list_item.py  api_error_body.py  api_error_detail.py  api_error_response.py  api_key_created_out.py  api_key_list_status.py  api_key_out.py  api_key_rotate_out.py  api_key_scope.py  api_list_response_catalog_model_out.py  api_list_response_catalog_provider_out.py  api_list_response_customer_plan_response.py  api_list_response_dictionary_out.py  api_list_response_node_ports_out.py  api_list_response_plan_response.py  api_list_response_template_out.py  api_list_response_upload_out.py  api_list_response_usage_activity_out.py  api_list_response_voice_similar_out.py  api_list_response_workspace_member_out.py  api_list_response_workspace_out.py  api_response_api_key_created_out.py  api_response_api_key_out.py  api_response_api_key_rotate_out.py  api_response_auth_whoami_out.py  api_response_balance_response.py  api_response_catalog_model_out.py  api_response_catalog_provider_out.py  api_response_checkout_response.py  api_response_customer_plan_change_preview_response.py  api_response_customer_subscription_response.py  api_response_dict.py  api_response_dictionary_out.py  api_response_download_url_out.py  api_response_email_notification_preferences_out.py  (+201 more)
src/onepin/uploads/: __init__.py  client.py  raw_client.py
src/onepin/uploads/types/: __init__.py  upload_confirm_request_context_type.py  upload_request_category.py
src/onepin/usage/: __init__.py  client.py  raw_client.py
src/onepin/usage/types/: __init__.py  usage_activity_api_v1_usage_activity_get_request_range.py  usage_by_language_api_v1_usage_by_language_get_request_activity_view.py  usage_by_language_api_v1usage_by_language_get_request_range.py  usage_summary_api_v1_usage_summary_get_request_range.py  usage_summary_api_v1usage_summary_get_request_activity_view.py
src/onepin/users/: __init__.py  client.py  raw_client.py
src/onepin/users/types/: __init__.py  list_my_templates_api_v1users_me_templates_get_request_sort.py
src/onepin/voices/: __init__.py  client.py  raw_client.py
src/onepin/voices/types/: __init__.py  (+6 more)
src/onepin/webhooks/: client.py  raw_client.py
src/onepin/workflows/: __init__.py  client.py  raw_client.py
src/onepin/workspace/: client.py  raw_client.py
src/onepin/workspace_aggregates/: client.py  raw_client.py
src/onepin/workspace_members/: client.py  raw_client.py
src/onepin/workspaces/: client.py  raw_client.py
tests/: conftest.py
tests/cli/: _manifest_snapshot.json  test_cli_composites.py  test_cli_dispatch.py  test_cli_errors.py  test_cli_extra.py  test_cli_flags.py  test_cli_health.py  test_cli_integration_respx.py  test_cli_login.py  test_cli_logout.py  test_cli_manifest.py  test_cli_provider_keys.py  test_cli_skill.py  test_cli_templates.py  test_cli_uploads.py  test_cli_voices.py  test_cli_whoami.py  test_cli_workflows.py
tests/unit/: test_auth_resolve.py  test_auth_resolver.py  test_build_client.py  test_credentials_file.py  test_ctx.py  test_dispatch.py  test_fsutil.py  test_http.py  test_manifest.py  test_registry.py  test_render.py  test_skill.py  test_update_check.py  test_version_gate.py
(+11 files in other folders)
