[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "onepin"
version = "0.2.0"
description = "OnePin Python SDK + CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Podonos", email = "kj@podonos.com" }]

dependencies = [
    "click>=8.1",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13",
    "pydantic>=2.7,<3.0",
    "tomli; python_version<\"3.11\"",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.scripts]
onepin = "onepin._cli.main:app"

[project.urls]
Documentation = "https://docs.onepin.ai"
Source = "https://github.com/podonos/onepin-python"
Issues = "https://github.com/podonos/onepin-python/issues"
Changelog = "https://github.com/podonos/onepin-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "respx>=0.22",
    "ruff>=0.6",
    "mypy>=1.11",
    "diff-cover>=8",
    "build",
    "twine",
    "trove-classifiers",
    "check-wheel-contents",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onepin"]

[tool.hatch.build.targets.wheel.force-include]
"src/onepin/py.typed" = "onepin/py.typed"
"src/onepin/_cli/py.typed" = "onepin/_cli/py.typed"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    # Fern-generated SDK is not subject to project style rules. Ruff's exclude
    # is path-prefix only, so CI explicitly runs `ruff check src/onepin/_cli`
    # to lint the hand-rolled CLI subpackage that lives under the same root.
    "src/onepin",
]

[tool.mypy]
strict = true
# Typer/click register commands via decorators mypy reads as untyped; strict's
# untyped-decorator check is noise here, not a real type gap.
disallow_untyped_decorators = false

# The Fern-generated SDK (everything under src/onepin/ except _cli/) is not gated
# by our type checks. Follow imports for inference, but never report its errors.
[[tool.mypy.overrides]]
module = [
    "onepin.core.*",
    "onepin.client",
    "onepin.environment",
    "onepin._default_clients",
]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
# Restrict collection to top-level tests/ — Fern-generated SDK ships its own
# tests under src/onepin/tests/ with markers we don't register.
testpaths = ["tests"]
