[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[project]
name = "onepin"
dynamic = ["version"]
description = "Onepin Python SDK + CLI — orchestrate, validate & ship production-ready voice (TTS) audio across 100+ models"
readme = "README.md"
keywords = [
    "onepin", "tts", "text-to-speech", "speech-synthesis", "voice",
    "voice-ai", "voice-agents", "audio", "workflow", "sdk", "cli",
    "elevenlabs", "cartesia",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Podonos", email = "support@onepin.ai" }]

dependencies = [
    "click>=8.1",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13",
    "pydantic>=2.7,<3.0",
    "packaging>=23",
    "tomli; python_version<\"3.11\"",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.scripts]
onepin = "onepin._cli.main:app"

[project.urls]
Homepage = "https://onepin.ai"
Documentation = "https://docs.onepin.ai"
Source = "https://github.com/podonos/onepin-python"
Issues = "https://github.com/podonos/onepin-python/issues"
Changelog = "https://github.com/podonos/onepin-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "respx>=0.22",
    "ruff>=0.6",
    "mypy>=1.11",
    "diff-cover>=8",
    "build",
    "twine",
    "trove-classifiers",
    "check-wheel-contents",
]

[tool.hatch.version]
source = "vcs"

# setuptools_scm's default appends a local segment (+gHASH) which PyPI/TestPyPI reject.
# no-local-version yields clean PEP 440 dev releases (e.g. 0.5.1.dev4) that upload cleanly.
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/onepin"]

[tool.hatch.build.targets.wheel.force-include]
"src/onepin/py.typed" = "onepin/py.typed"
"src/onepin/_cli/py.typed" = "onepin/_cli/py.typed"
# Bundled agent skill data so `onepin skill install` can materialize it. Only the .md files
# need forcing — the package's .py (incl. _skill/__init__.py) already ship via `packages`, and
# force-including the whole dir would double-add __init__.py and fail the wheel build.
"src/onepin/_cli/_skill/onepin/SKILL.md" = "onepin/_cli/_skill/onepin/SKILL.md"
"src/onepin/_cli/_skill/onepin/reference.md" = "onepin/_cli/_skill/onepin/reference.md"

[tool.check-wheel-contents]
# W002 flags byte-identical files as "duplicates". The Fern-generated SDK ships many
# empty package-marker `__init__.py` files (api_keys, billing, webhooks, workspace_*, ...)
# which are legitimately identical — a benign false positive that fails `check-wheel-contents`
# in the publish build. Ignore it; all other wheel-content checks still run.
ignore = ["W002"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    # Fern-generated SDK is not subject to project style rules. Ruff's exclude
    # is path-prefix only, so CI explicitly runs `ruff check src/onepin/_cli`
    # to lint the hand-rolled CLI subpackage that lives under the same root.
    "src/onepin",
]

[tool.mypy]
strict = true
# Typer/click register commands via decorators mypy reads as untyped; strict's
# untyped-decorator check is noise here, not a real type gap.
disallow_untyped_decorators = false

# The Fern-generated SDK (everything under src/onepin/ except _cli/) is not gated
# by our type checks. Follow imports for inference, but never report its errors.
[[tool.mypy.overrides]]
module = [
    "onepin.core.*",
    "onepin.client",
    "onepin.environment",
    "onepin._default_clients",
]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
# Restrict collection to top-level tests/ — Fern-generated SDK ships its own
# tests under src/onepin/tests/ with markers we don't register.
testpaths = ["tests"]
